Little spacing issue in second-section-titles

--- a/css/home/second-section.css
+++ b/css/home/second-section.css
@@ -29,6 +29,20 @@ h1{
     margin: 0;
 }
 
+.second-section-titles > h3{
+    margin-bottom:0;
+    margin-top:0;
+    
+}
+
+.second-section-titles > h3:first-child{
+   margin-bottom:1em;
+}
+
+.second-section-titles > h3:nth-child(3){
+    margin-top:1em;
+ }
+
 
 .imgs-carousel{
     display:flex;
